--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -30,17 +30,21 @@
 
     /* NavigationItem.tsx */
     .NavigationItem {
-        @apply leading-loose rounded-md 
+        @apply leading-loose font-medium
         transition-colors dark:text-gray-300
-        text-gray-700 flex items-center;
-    }
-
-    .NavigationItem a {
-        @apply py-2 px-1 lg:px-3 block flex font-medium items-center rounded-md w-full text-sm;
+        text-gray-700 flex items-center text-sm;
     }
 
     .NavigationItemActive a {
-        @apply bg-gray-100 dark:text-white dark:bg-black-300 font-semibold;
+        @apply text-primary-500 font-semibold;
+    }
+
+    .NavigationItem a {
+        @apply py-2 px-1 lg:px-3 block flex items-center rounded-md w-full;
+    }
+
+    .PillNavigationMenu .NavigationItemActive a {
+        @apply bg-gray-100 dark:text-white text-gray-600 dark:bg-black-300 font-semibold rounded-md;
     }
 
     .SecondaryNavigationMenu .NavigationItemActive a {
@@ -64,8 +68,8 @@
     }
 
     .NavigationItemNotActive {
-        @apply active:text-current text-gray-500 dark:text-gray-400
-         hover:text-current;
+        @apply active:text-current text-gray-700 dark:text-gray-300
+        hover:text-current dark:hover:text-white;
     }
 
     .NavigationItemActive {
@@ -284,13 +288,14 @@
         border-2 border-red-400 hover:text-white;
     }
 
-    .Button.ButtonDangerFlat {
-        @apply bg-transparent text-red-500 hover:bg-red-50 ring-0
-        active:bg-red-100 dark:hover:bg-red-500/10 dark:active:bg-red-500/20;
+    .Button.ButtonPrimaryFlat {
+        @apply bg-primary-400/5 text-primary-500 hover:bg-primary-50 ring-0
+        active:bg-primary-100 dark:hover:bg-primary-500/10 dark:active:bg-primary-500/20;
     }
 
     .Button.ButtonDangerFlat {
-        @apply bg-transparent text-red-500 hover:bg-red-50 active:bg-red-100;
+        @apply bg-red-400/5 text-red-500 hover:bg-red-50 ring-0
+        active:bg-red-100 dark:hover:bg-red-500/10 dark:active:bg-red-500/20;
     }
 
     .Button[disabled],
