--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -7,11 +7,6 @@
         @apply outline-primary-200 outline-2 active:outline-none;
     }
 
-    /* Container.tsx */
-    .Container {
-        @apply container mx-auto px-5 xl:px-0;
-    }
-
     /* NavigationContainer.tsx */
     .NavigationContainer {
         @apply border-b dark:border-black-400 dark:border-black-400 border-gray-50;
@@ -25,26 +20,30 @@
 
     .NavigationMenu.VerticalNavigationMenu {
         @apply flex flex-row justify-between space-x-2 lg:justify-start
-        lg:flex-col lg:space-x-0 lg:space-y-2 items-start;
+        lg:flex-col lg:space-x-0 lg:space-y-1 items-start;
     }
 
     /* NavigationItem.tsx */
     .NavigationItem {
-        @apply leading-loose font-medium
+        @apply leading-loose
         transition-colors dark:text-gray-300
-        text-gray-700 flex items-center text-sm;
+        text-gray-600 flex items-center text-sm;
     }
 
     .NavigationItemActive a {
-        @apply text-primary-500 font-semibold;
+        @apply text-primary-500 font-medium;
     }
 
     .NavigationItem a {
-        @apply py-2 px-1 lg:px-3 block flex items-center rounded-md w-full;
+        @apply py-1 px-1 lg:px-2 xl:px-3 flex items-center rounded-md font-medium w-full transition-colors;
     }
 
     .PillNavigationMenu .NavigationItemActive a {
-        @apply bg-gray-100 dark:text-white text-gray-600 dark:bg-black-300 font-semibold rounded-md;
+        @apply bg-gray-100 dark:text-white text-current dark:bg-black-300 rounded-md;
+    }
+
+    .PillNavigationMenu .NavigationItemNotActive a {
+        @apply hover:bg-gray-50 dark:hover:bg-black-400 active:bg-gray-100 dark:active:bg-black-300;
     }
 
     .SecondaryNavigationMenu .NavigationItemActive a {
@@ -220,7 +219,7 @@
 
     /* Label.tsx */
     .Label {
-        @apply text-gray-500 text-sm font-semibold w-full dark:text-gray-400;
+        @apply text-gray-500 text-sm font-medium w-full dark:text-gray-400;
     }
 
     .Label > * {
