--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,3 @@
-/* Add here you favorite fonts */
-@import url('//fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700;800&display=swap');
-
 @import "components.css";
 @import "app.css";
 @import "tippy.css";
@@ -17,11 +14,10 @@
 html {
     text-rendering: geometricPrecision;
     -webkit-font-smoothing: subpixel-antialiased;
-    font-feature-settings: "rlig" 1,"calt" 1,"ss01" 1;
 }
 
 body {
-    @apply bg-white text-gray-800 dark:bg-black-500 dark:text-gray-300;
+    @apply bg-white text-gray-800 dark:bg-black-500 dark:text-gray-300 font-sans;
 }
 
 /*
