--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -95,21 +95,36 @@
         @apply flex space-x-2 items-center font-medium;
     }
 
-    .Badge.ColorNormal {
+    .Badge.BadgeNormal {
         @apply text-gray-500 bg-gray-100
         dark:text-gray-300 dark:bg-black-300;
     }
 
-    .Badge.ColorSuccess {
-        @apply bg-green-100 dark:bg-black-300
-        text-green-700 font-semibold;
+    .Badge.BadgeSuccess {
+        @apply bg-green-50 dark:bg-green-500/10
+        text-green-800;
     }
 
-    .Badge.SizeNormal {
+    .Badge.BadgeWarn {
+        @apply bg-yellow-50 dark:bg-yellow-100/5
+        text-yellow-800;
+    }
+
+    .Badge.BadgeError {
+        @apply bg-red-50 dark:bg-red-500/10
+        text-red-800;
+    }
+
+    .Badge.BadgeInfo {
+        @apply bg-blue-50 dark:bg-blue-500/10
+        text-blue-800;
+    }
+
+    .Badge.BadgeNormal {
         @apply rounded-lg px-3 py-2 text-sm;
     }
 
-    .Badge.SizeSmall {
+    .Badge.BadgeSmall {
         @apply rounded px-2 py-1 text-xs;
     }
 
