--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -241,5 +241,9 @@
     .PillHeader {
         @apply rounded-full border px-4 py-2 shadow-lg
     }
+
+    .ToggleGroupItem {
+        @apply mx-5 px-5 hover:border-b-4 hover:border-b-primary-700 data-[state=on]:border-b-4 data-[state=on]:border-b-primary-700
+    }
 }
 /* Stop purging. */
